@@ -20,6 +20,9 @@ New Features
 - Added reopen#FinancialTimePeriod service to open closed fiscal time
   periods, opposite of the corresponding open service; requires the
   FISCAL_REOPEN permission
+- When posting an applied payment or payment application the receivable or
+  payable GL account is determined based on the corresponding invoice so
+  they always match
 - The approve#Order service now requires the ORDER_APPROVE permission
 - In add#OrderPartToShipment only item quantities not yet associated with a
   Shipment (not shipped quantities) are added
